--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
+						<!-- <section>
 							<form method="post" action="">
 								<div class="fields">
 									<div class="field">
@@ -128,7 +128,7 @@
 								</div>
 							</form>
 						</section>
-						<section class="split contact">
+						<section class="split contact"> -->
 							<section class="alt">
 								<h3>Address</h3>
 								<p>Street Tony Blair<br />
