--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						</ul>
 						<ul class="icons">
 							
-							<li><a href="https://www.linkedin.com/in/festim-krasniqi" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/festim-krasniqi-a80b85295/" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/FestimKrasniqi" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
