added some informations in index.html file

--- a/index.html
+++ b/index.html
@@ -19,13 +19,24 @@
 
 			<!-- Intro -->
 			<div id="intro">
-				<h1>Festim<br />
-				Krasniqi</h1>
-				<p>Software Engineer,Interested in Backend Developer,Full Stack Developer,Database Management and very passionate about coding.</p>
-				<ul class="actions">
-					<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-				</ul>
-			</div>
+    <h1>Festim<br />Krasniqi</h1>
+    <p>
+        I am a passionate <strong>Software Engineer</strong> with hands-on experience in building 
+        <strong>backend systems, full-stack web applications, and database-driven solutions</strong>. <br><br>
+        Skilled in <strong>JavaScript (Node.js, React, Express)</strong>, <strong>PHP (Laravel)</strong>, 
+        and <strong>Python (Flask, ML)</strong>, I enjoy solving complex problems and continuously learning 
+        new technologies. <br><br>
+        I am particularly interested in <strong>Backend Development</strong>, 
+        <strong>Full Stack Development</strong>, and <strong>Database Management</strong>. 
+        Currently, I am focused on improving my expertise in <strong>cloud deployment (Docker, AWS)</strong> 
+        and <strong>DevOps practices</strong>. <br><br>
+        My goal is to contribute to impactful projects while growing as a developer and team player.
+    </p>
+    <ul class="actions">
+        <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+    </ul>
+</div>
+
 
 			<!-- Header -->
 			<header id="header">
@@ -95,8 +106,27 @@
 							<li><a href="https://github.com/FestimKrasniqi/DiplomaThesis" target="_blank" class="button">View Project</a></li>
 						</ul>
 					</article>
-				</section>
+				
 
+				
+					<article>
+	<header>
+		<h2>
+			<a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank">E-commerce-app</a>
+		</h2>
+	</header>
+	<!-- Image removed here -->
+	<p>
+		This is a full-stack E-commerce application built using the MERN stack (MongoDB, Express, React, Node.js).<br/>
+		Admin users have access to manage all products, users, orders, and reviews through a dedicated dashboard.
+	</p>
+	<ul class="actions special">
+		<li><a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank" class="button">View Code</a></li>
+		<li><a href="https://mern-app-aac6e.web.app/" target="_blank" class="button">Live Demo</a></li>
+	</ul>
+</article>
+
+               </section>
 			</div>
 
 			<!-- Footer -->
