Update button text to 'View Project'

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 		Admin users have access to manage all products, users, orders, and reviews through a dedicated dashboard.
 	</p>
 	<ul class="actions special">
-		<li><a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank" class="button">View Code</a></li>
+		<li><a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank" class="button">View Project</a></li>
 		<li><a href="https://mern-app-aac6e.web.app/" target="_blank" class="button">Live Demo</a></li>
 	</ul>
 </article>
