--- a/index.html
+++ b/index.html
@@ -1,174 +1,172 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>My Portfolio</title>
-		<meta charset="utf-8" />
-	    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<html lang="en">
+<head>
+  <title>Festim Krasniqi | Portfolio</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-		<div id="wrapper" class="fade-in">
+  <!-- Wrapper -->
+  <div id="wrapper" class="fade-in">
 
-			<!-- Intro -->
-			<div id="intro">
-    <h1>Festim<br />Krasniqi</h1>
-    <p>
-        I am a passionate <strong>Software Engineer</strong> with hands-on experience in building 
-        <strong>backend systems, full-stack web applications, and database-driven solutions</strong>. <br><br>
-        Skilled in <strong>JavaScript (Node.js, React, Express)</strong>, <strong>PHP (Laravel)</strong>, 
-        and <strong>Python (Flask, ML)</strong>, I enjoy solving complex problems and continuously learning 
-        new technologies. <br><br>
-        I am particularly interested in <strong>Backend Development</strong>, 
-        <strong>Full Stack Development</strong>, and <strong>Database Management</strong>. 
-        Currently, I am focused on improving my expertise in <strong>cloud deployment (Docker, AWS)</strong> 
-        and <strong>DevOps practices</strong>. <br><br>
-        My goal is to contribute to impactful projects while growing as a developer and team player.
-    </p>
-    <ul class="actions">
-        <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
-    </ul>
-</div>
+    <!-- Intro / Hero -->
+    <div id="intro">
+      <h1 class="hero-title">Festim<br/>Krasniqi</h1>
+      <p class="hero-subtitle">
+        Passionate <strong>Software Engineer</strong> experienced in building <strong>full-stack applications, backend systems,</strong> 
+        and <strong>cloud solutions</strong>.<br><br>
+        Skilled in <strong>JavaScript (Node.js, React)</strong>, <strong>PHP (Laravel)</strong>, 
+        and <strong>Python (Flask, ML)</strong>.<br>
+        Currently exploring <strong>Cloud Deployment (AWS, Docker)</strong> & <strong>DevOps practices</strong>.
+      </p>
+      <ul class="actions">
+        <li><a href="#main" class="button primary scrolly">View My Work</a></li>
+      </ul>
+    </div>
 
+    <!-- Header -->
+    <header id="header">
+      <a href="index.html" class="logo">Festim Krasniqi</a>
+    </header>
 
-			<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="logo">Festim Krasniqi</a>
-			</header>
+    <!-- Navigation -->
+    <nav id="nav">
+      <ul class="links">
+        <li class="active"><a href="#main">Projects</a></li>
+        <li><a href="#footer">Contact</a></li>
+      </ul>
+      <ul class="icons">
+        <li><a href="https://www.linkedin.com/in/festim-krasniqi-a80b85295" class="icon brands fa-linkedin" target="_blank"></a></li>
+        <li><a href="https://github.com/FestimKrasniqi" class="icon brands fa-github" target="_blank"></a></li>
+      </ul>
+    </nav>
 
-			<!-- Nav -->
-			<nav id="nav">
-				<ul class="links">
-					<li class="active"><a href="index.html">My Portfolio</a></li>
-				</ul>
-				<ul class="icons">
-					<li><a href="https://www.linkedin.com/in/festim-krasniqi-a80b85295/" class="icon brands fa-linkedin" target="_blank"><span class="label">Linkedin</span></a></li>
-					<li><a href="https://github.com/FestimKrasniqi" class="icon brands fa-github" target="_blank"><span class="label">GitHub</span></a></li>
-				</ul>
-			</nav>
+    <!-- Main -->
+    <div id="main">
 
-			<!-- Main -->
-			<div id="main">
+      <!-- Featured Project -->
+      <article class="post featured">
+        <header class="major">
+          <h2><a href="https://github.com/FestimKrasniqi/Restaurant-Management-System-Backend" target="_blank">
+            Restaurant Management System</a></h2>
+          <p>A full-stack app using <strong>React</strong> & <strong>Laravel</strong>.  
+          Features REST APIs, Authentication, Middleware, and Admin Management.</p>
+        </header>
+        <ul class="actions special">
+          <li><a href="https://github.com/FestimKrasniqi/Restaurant-Management-System-Backend" target="_blank" class="button primary">View Project</a></li>
+        </ul>
+      </article>
 
-				<!-- Featured Post -->
-				<article class="post featured">
-					<header class="major">
-						<h2><a href="https://github.com/FestimKrasniqi/Restaurant-Management-System-Backend" target="_blank">Restaurant Management System</a></h2>
-						<p>
-						This project is created using technologies like React and Laravel.<br/> Logic of this project is creating RESTful APIs in the Laravel and fetching these APIs in React.<br/> I have also included in Laravel functionalities like Middleware, Authentication, and Authorization.<br/></p>
-					</header>
-					<!-- Image removed here -->
-					<ul class="actions special">
-						<li><a href="https://github.com/FestimKrasniqi/Restaurant-Management-System-Backend" target="_blank" class="button large">View this Project</a></li>
-					</ul>
-				</article>
+      <!-- Project Grid -->
+      <section class="posts">
+        <article>
+          <header>
+            <h2><a href="https://github.com/FestimKrasniqi/Weather-App-IOS" target="_blank">Weather App (iOS)</a></h2>
+          </header>
+          <p>Swift-based app displaying a 7-day forecast based on location coordinates.</p>
+          <ul class="actions special">
+            <li><a href="https://github.com/FestimKrasniqi/Weather-App-IOS" target="_blank" class="button">View Project</a></li>
+          </ul>
+        </article>
 
-				<!-- Posts -->
-				<section class="posts">
-					<article>
-						<header>
-							<h2><a href="https://github.com/FestimKrasniqi/Weather-App-IOS" target="_blank">Weather App</a></h2>
-						</header>
-						<!-- Image removed here -->
-						<p>This project is about creating a weather app with swift Ios.<br/> The logic of this project is to show weather data for next 7 days for one particular location based on the data given by longitude and latitude of that location. </p>
-						<ul class="actions special">
-							<li><a href="https://github.com/FestimKrasniqi/Weather-App-IOS" target="_blank" class="button">View Project</a></li>
-						</ul>
-					</article>
+        <article>
+          <header>
+            <h2><a href="https://github.com/FestimKrasniqi/Secure_Chat_Application" target="_blank">Secure Chat App</a></h2>
+          </header>
+          <p>Python-based client-server chat app with <strong>RSA encryption</strong> for secure communication.</p>
+          <ul class="actions special">
+            <li><a href="https://github.com/FestimKrasniqi/Secure_Chat_Application" target="_blank" class="button">View Project</a></li>
+          </ul>
+        </article>
+      </section>
 
-					<article>
-						<header>
-							<h2><a href="https://github.com/FestimKrasniqi/Secure_Chat_Application" target="_blank">Secure Chat Application</a></h2>
-						</header>
-						<!-- Image removed here -->
-						<p>This project is about implementation of communication between server and client,<br/> who communicate with each other in the same IP address and the same Port number.<br/> This Application is done with Python and also implements RSA algorithm for secure communication.</p>
-						<ul class="actions special">
-							<li><a href="https://github.com/FestimKrasniqi/Secure_Chat_Application" target="_blank" class="button">View Project</a></li>
-						</ul>
-					</article>
-				</section>
+      <section class="posts">
+        <article>
+          <header>
+            <h2><a href="https://github.com/FestimKrasniqi/DiplomaThesis" target="_blank">Stock Market Prediction</a></h2>
+          </header>
+          <p>Flask web app predicting stock prices using an <strong>LSTM neural network</strong> and historical data from yFinance.</p>
+          <ul class="actions special">
+            <li><a href="https://github.com/FestimKrasniqi/DiplomaThesis" target="_blank" class="button">View Project</a></li>
+          </ul>
+        </article>
 
-				<section class="posts">
-					<article>
-						<header>
-							<h2><a href="https://github.com/FestimKrasniqi/DiplomaThesis" target="_blank">Stock Market Prediction Application</a></h2>
-						</header>
-						<!-- Image removed here -->
-						<p>This is a Flask-based web application developed as part of a diploma thesis.<br/> It predicts future stock prices using a LSTM (Long Short-Term Memory) neural network.<br/> The app uses the yfinance library to fetch historical stock data and presents predictions on a user-friendly web interface built with Flask views.</p>
-						<ul class="actions special">
-							<li><a href="https://github.com/FestimKrasniqi/DiplomaThesis" target="_blank" class="button">View Project</a></li>
-						</ul>
-					</article>
-				
+        <article>
+          <header>
+            <h2><a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank">E-commerce App</a></h2>
+          </header>
+          <p>Full-stack <strong>MERN app</strong> with admin dashboard for products, orders, and user management.</p>
+          <ul class="actions special">
+            <li><a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank" class="button">View Code</a></li>
+            <li><a href="https://mern-app-aac6e.web.app/" target="_blank" class="button">Live Demo</a></li>
+          </ul>
+        </article>
+      </section>
 
-				
-					<article>
-	<header>
-		<h2>
-			<a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank">E-commerce-app</a>
-		</h2>
-	</header>
-	<!-- Image removed here -->
-	<p>
-		This is a full-stack E-commerce application built using the MERN stack (MongoDB, Express, React, Node.js).<br/>
-		Admin users have access to manage all products, users, orders, and reviews through a dedicated dashboard.
-	</p>
-	<ul class="actions special">
-		<li><a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank" class="button">View Project</a></li>
-		<li><a href="https://mern-app-aac6e.web.app/" target="_blank" class="button">Live Demo</a></li>
-	</ul>
-</article>
+      <section class="posts">
+        <article>
+          <header>
+            <h2><a href="https://github.com/FestimKrasniqi/Online-Guitar-Shop" target="_blank">Online Guitar Shop</a></h2>
+          </header>
+          <p>React + TypeScript app with <strong>GraphQL API</strong> & multilingual support.</p>
+          <ul class="actions special">
+            <li><a href="https://github.com/FestimKrasniqi/Online-Guitar-Shop" target="_blank" class="button">View Project</a></li>
+          </ul>
+        </article>
 
-               </section>
-			</div>
+        <article>
+          <header>
+            <h2><a href="https://github.com/FestimKrasniqi/Mini-Issue-Tracker-App" target="_blank">Mini Issue Tracker</a></h2>
+          </header>
+          <p>Laravel + Bootstrap 5 tracker app for managing projects, issues, and team members.</p>
+          <ul class="actions special">
+            <li><a href="https://github.com/FestimKrasniqi/Mini-Issue-Tracker-App" target="_blank" class="button">View Project</a></li>
+          </ul>
+        </article>
+      </section>
 
-			<!-- Footer -->
-			<footer id="footer">
-				<section class="alt">
-					<h3>Address</h3>
-					<p>Street Tony Blair<br />
-					30000 Peje</p>
-				</section>
-				<section>
-					<h3>Phone</h3>
-					<p><a href="tel:+38349553410">(049) 553-410</a></p>
-				</section>
-				<section>
-					<h3>Email</h3>
-					<p><a href="mailto:krasniqif937@gmail.com,festim.krasniqi7@student.uni-pr.edu">krasniqif937@gmail.com</a></p>
-				</section>
-				<section>
-					<h3>Social</h3>
-					<ul class="icons alt">
-						<li><a href="https://x.com/Festim53831018" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/festim.krasniqi.54" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/festimmkrasniqii/?next=%2F" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					</ul>
-				</section>
-			</footer>
+    </div>
 
-			<!-- Copyright -->
-			<div id="copyright">
-				<ul><li>© 2024 Festim Krasniqi. All Rights Reserved.</li></ul>
-			</div>
+    <!-- Footer -->
+    <footer id="footer">
+      <section class="alt">
+        <h3>Location</h3>
+        <p>Peje, Kosovo</p>
+      </section>
+      <section>
+        <h3>Phone</h3>
+        <p><a href="tel:+38349553410">+383 49 553 410</a></p>
+      </section>
+      <section>
+        <h3>Email</h3>
+        <p><a href="mailto:krasniqif937@gmail.com">krasniqif937@gmail.com</a></p>
+      </section>
+      <section>
+        <h3>Connect</h3>
+        <ul class="icons alt">
+          <li><a href="https://x.com/Festim53831018" target="_blank" class="icon brands alt fa-twitter"></a></li>
+          <li><a href="https://www.facebook.com/festim.krasniqi.54" target="_blank" class="icon brands alt fa-facebook-f"></a></li>
+          <li><a href="https://www.instagram.com/festimmkrasniqii" target="_blank" class="icon brands alt fa-instagram"></a></li>
+        </ul>
+      </section>
+    </footer>
 
-		</div>
+    <!-- Copyright -->
+    <div id="copyright">
+      <ul><li>© 2024 Festim Krasniqi</li></ul>
+    </div>
+  </div>
 
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrollex.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/browser.min.js"></script>
-		<script src="assets/js/breakpoints.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<script src="assets/js/main.js"></script>
-
-	</body>
+  <!-- Scripts -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/jquery.scrollex.min.js"></script>
+  <script src="assets/js/jquery.scrolly.min.js"></script>
+  <script src="assets/js/browser.min.js"></script>
+  <script src="assets/js/breakpoints.min.js"></script>
+  <script src="assets/js/util.js"></script>
+  <script src="assets/js/main.js"></script>
+</body>
 </html>
