--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
           <p>React + TypeScript app with <strong>GraphQL API</strong> & multilingual support.</p>
           <ul class="actions special">
             <li><a href="https://github.com/FestimKrasniqi/Online-Guitar-Shop" target="_blank" class="button">View Project</a></li>
+             <li><a href="https://online-guitar-shop-kappa.vercel.app/" target="_blank" class="button">Live Demo</a></li>
           </ul>
         </article>
 
