--- a/index.html
+++ b/index.html
@@ -4,170 +4,322 @@
   <title>Festim Krasniqi | Portfolio</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
   <link rel="stylesheet" href="assets/css/main.css" />
-  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+  <noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" />
+  </noscript>
 </head>
+
 <body class="is-preload">
 
-  <!-- Wrapper -->
-  <div id="wrapper" class="fade-in">
+<div id="wrapper" class="fade-in">
 
-    <!-- Intro / Hero -->
-    <div id="intro">
-      <h1 class="hero-title">Festim<br/>Krasniqi</h1>
-      <p class="hero-subtitle">
-        Passionate <strong>Software Engineer</strong> experienced in building <strong>full-stack applications, backend systems,</strong> 
-        and <strong>cloud solutions</strong>.<br><br>
-        Skilled in <strong>JavaScript (Node.js, React)</strong>, <strong>PHP (Laravel)</strong>, 
-        and <strong>Python (Flask, ML)</strong>.<br>
-        Currently exploring <strong>Cloud Deployment (AWS, Docker)</strong> & <strong>DevOps practices</strong>.
+  <!-- Intro / Hero -->
+  <section id="intro">
+    <h1 class="hero-title">Festim<br/>Krasniqi</h1>
+
+   <p class="hero-subtitle">
+  I am a Software Engineer focused on building scalable, efficient, and user-friendly full-stack applications. 
+  I have hands-on experience developing backend systems, RESTful APIs, and modern web interfaces using 
+  <strong>JavaScript (Node.js, React)</strong>, <strong>PHP (Laravel)</strong>, and 
+  <strong>Python (Flask, Django)</strong>.<br><br>
+
+  I enjoy solving real-world problems through software design, clean architecture, and performance-oriented solutions. 
+  Currently, I am expanding my expertise in <strong>Cloud technologies (AWS)</strong>, 
+  <strong>containerization with Docker</strong>, and modern <strong>DevOps practices</strong>.
+</p>
+
+
+    <ul class="actions">
+      <li>
+        <a href="#projects" class="button primary scrolly">View My Work</a>
+      </li>
+    </ul>
+  </section>
+
+  <!-- Header -->
+  <header id="header">
+    <a href="index.html" class="logo">Festim Krasniqi</a>
+  </header>
+
+  <!-- Navigation -->
+  <nav id="nav">
+    <ul class="links">
+      <li class="active"><a href="#projects">Projects</a></li>
+      <li><a href="#footer">Contact</a></li>
+    </ul>
+
+    <ul class="icons">
+      <li>
+        <a href="https://www.linkedin.com/in/festim-krasniqi-a80b85295"
+           class="icon brands fa-linkedin"
+           target="_blank" aria-label="LinkedIn"></a>
+      </li>
+
+      <li>
+        <a href="https://github.com/FestimKrasniqi"
+           class="icon brands fa-github"
+           target="_blank" aria-label="GitHub"></a>
+      </li>
+    </ul>
+  </nav>
+
+  <!-- Main -->
+  <main id="main">
+
+    <!-- Featured Project -->
+    <article class="post featured">
+      <header class="major">
+        <h2>
+          <a href="https://github.com/FestimKrasniqi/Restaurant-Management-System-Backend" target="_blank">
+            Restaurant Management System
+          </a>
+        </h2>
+
+        <p>
+      A full-stack restaurant management platform built with <strong>React</strong> and 
+      <strong>Laravel</strong> that streamlines order handling, authentication, and administrative operations. 
+      The system implements RESTful APIs, middleware-based authorization, and role-based access control 
+      to manage menus, orders, and users efficiently.
       </p>
-      <ul class="actions">
-        <li><a href="#main" class="button primary scrolly">View My Work</a></li>
+      </header>
+
+      <ul class="actions special">
+        <li>
+          <a href="https://github.com/FestimKrasniqi/Restaurant-Management-System-Backend"
+             target="_blank"
+             class="button primary">
+             View Project
+          </a>
+        </li>
       </ul>
-    </div>
+    </article>
 
-    <!-- Header -->
-    <header id="header">
-      <a href="index.html" class="logo">Festim Krasniqi</a>
-    </header>
+    <!-- Project Grid -->
+    <section id="projects" class="posts">
 
-    <!-- Navigation -->
-    <nav id="nav">
-      <ul class="links">
-        <li class="active"><a href="#main">Projects</a></li>
-        <li><a href="#footer">Contact</a></li>
-      </ul>
-      <ul class="icons">
-        <li><a href="https://www.linkedin.com/in/festim-krasniqi-a80b85295" class="icon brands fa-linkedin" target="_blank"></a></li>
-        <li><a href="https://github.com/FestimKrasniqi" class="icon brands fa-github" target="_blank"></a></li>
-      </ul>
-    </nav>
-
-    <!-- Main -->
-    <div id="main">
-
-      <!-- Featured Project -->
-      <article class="post featured">
-        <header class="major">
-          <h2><a href="https://github.com/FestimKrasniqi/Restaurant-Management-System-Backend" target="_blank">
-            Restaurant Management System</a></h2>
-          <p>A full-stack app using <strong>React</strong> & <strong>Laravel</strong>.  
-          Features REST APIs, Authentication, Middleware, and Admin Management.</p>
+      <!-- Weather -->
+      <article>
+        <header>
+          <h2>
+            <a href="https://github.com/FestimKrasniqi/Weather-App-IOS" target="_blank">
+              Weather App (iOS)
+            </a>
+          </h2>
         </header>
+
+        <p>
+      A Swift-based mobile application that provides real-time weather forecasts using geolocation 
+      coordinates. The app integrates external weather APIs to display daily forecasts and temperature 
+      trends while following iOS UI/UX best practices.
+     </p>
+
         <ul class="actions special">
-          <li><a href="https://github.com/FestimKrasniqi/Restaurant-Management-System-Backend" target="_blank" class="button primary">View Project</a></li>
+          <li>
+            <a href="https://github.com/FestimKrasniqi/Weather-App-IOS"
+               target="_blank"
+               class="button">View Project</a>
+          </li>
         </ul>
       </article>
 
-      <!-- Project Grid -->
-      <section class="posts">
-        <article>
-          <header>
-            <h2><a href="https://github.com/FestimKrasniqi/Weather-App-IOS" target="_blank">Weather App (iOS)</a></h2>
-          </header>
-          <p>Swift-based app displaying a 7-day forecast based on location coordinates.</p>
-          <ul class="actions special">
-            <li><a href="https://github.com/FestimKrasniqi/Weather-App-IOS" target="_blank" class="button">View Project</a></li>
-          </ul>
-        </article>
+      <!-- Secure Chat -->
+      <article>
+        <header>
+          <h2>
+            <a href="https://github.com/FestimKrasniqi/Secure_Chat_Application" target="_blank">
+              Secure Chat App
+            </a>
+          </h2>
+        </header>
 
-        <article>
-          <header>
-            <h2><a href="https://github.com/FestimKrasniqi/Secure_Chat_Application" target="_blank">Secure Chat App</a></h2>
-          </header>
-          <p>Python-based client-server chat app with <strong>RSA encryption</strong> for secure communication.</p>
-          <ul class="actions special">
-            <li><a href="https://github.com/FestimKrasniqi/Secure_Chat_Application" target="_blank" class="button">View Project</a></li>
-          </ul>
-        </article>
-      </section>
+       <p>
+      A Python client-server messaging application enabling secure real-time communication using 
+      <strong>RSA encryption</strong>. The project demonstrates socket programming, public-key 
+      cryptography, and secure message transmission between multiple clients.
+     </p>
 
-      <section class="posts">
-        <article>
-          <header>
-            <h2><a href="https://github.com/FestimKrasniqi/DiplomaThesis" target="_blank">Stock Market Prediction</a></h2>
-          </header>
-          <p>Flask web app predicting stock prices using an <strong>LSTM neural network</strong> and historical data from yFinance.</p>
-          <ul class="actions special">
-            <li><a href="https://github.com/FestimKrasniqi/DiplomaThesis" target="_blank" class="button">View Project</a></li>
-          </ul>
-        </article>
-
-        <article>
-          <header>
-            <h2><a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank">E-commerce App</a></h2>
-          </header>
-          <p>Full-stack <strong>MERN app</strong> with admin dashboard for products, orders, and user management.</p>
-          <ul class="actions special">
-            <li><a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank" class="button">View Code</a></li>
-            <li><a href="https://mern-app-aac6e.web.app/" target="_blank" class="button">Live Demo</a></li>
-          </ul>
-        </article>
-      </section>
-
-      <section class="posts">
-        <article>
-          <header>
-            <h2><a href="https://github.com/FestimKrasniqi/Online-Guitar-Shop" target="_blank">Online Guitar Shop</a></h2>
-          </header>
-          <p>React + TypeScript app with <strong>GraphQL API</strong> & multilingual support.</p>
-          <ul class="actions special">
-            <li><a href="https://github.com/FestimKrasniqi/Online-Guitar-Shop" target="_blank" class="button">View Project</a></li>
-             <li><a href="https://online-guitar-shop-kappa.vercel.app/" target="_blank" class="button">Live Demo</a></li>
-          </ul>
-        </article>
-
-        <article>
-          <header>
-            <h2><a href="https://github.com/FestimKrasniqi/Mini-Issue-Tracker-App" target="_blank">Mini Issue Tracker</a></h2>
-          </header>
-          <p>Laravel + Bootstrap 5 tracker app for managing projects, issues, and team members.</p>
-          <ul class="actions special">
-            <li><a href="https://github.com/FestimKrasniqi/Mini-Issue-Tracker-App" target="_blank" class="button">View Project</a></li>
-          </ul>
-        </article>
-      </section>
-
-    </div>
-
-    <!-- Footer -->
-    <footer id="footer">
-      <section class="alt">
-        <h3>Location</h3>
-        <p>Peje, Kosovo</p>
-      </section>
-      <section>
-        <h3>Phone</h3>
-        <p><a href="tel:+38349553410">+383 49 553 410</a></p>
-      </section>
-      <section>
-        <h3>Email</h3>
-        <p><a href="mailto:krasniqif937@gmail.com">krasniqif937@gmail.com</a></p>
-      </section>
-      <section>
-        <h3>Connect</h3>
-        <ul class="icons alt">
-          <li><a href="https://x.com/Festim53831018" target="_blank" class="icon brands alt fa-twitter"></a></li>
-          <li><a href="https://www.facebook.com/festim.krasniqi.54" target="_blank" class="icon brands alt fa-facebook-f"></a></li>
-          <li><a href="https://www.instagram.com/festimmkrasniqii" target="_blank" class="icon brands alt fa-instagram"></a></li>
+        <ul class="actions special">
+          <li>
+            <a href="https://github.com/FestimKrasniqi/Secure_Chat_Application"
+               target="_blank"
+               class="button">View Project</a>
+          </li>
         </ul>
-      </section>
-    </footer>
+      </article>
 
-    <!-- Copyright -->
-    <div id="copyright">
-      <ul><li>© 2024 Festim Krasniqi</li></ul>
-    </div>
+      <!-- Stock Prediction -->
+      <article>
+        <header>
+          <h2>
+            <a href="https://github.com/FestimKrasniqi/DiplomaThesis" target="_blank">
+              Stock Market Prediction
+            </a>
+          </h2>
+        </header>
+
+        <p>
+      A machine learning web application developed using <strong>Flask</strong> and 
+      <strong>TensorFlow</strong> that predicts future stock prices using an 
+      <strong>LSTM neural network</strong>. The system processes historical data from yFinance, 
+      performs preprocessing, and visualizes predicted market trends.
+     </p>
+
+
+        <ul class="actions special">
+          <li>
+            <a href="https://github.com/FestimKrasniqi/DiplomaThesis"
+               target="_blank"
+               class="button">View Project</a>
+          </li>
+        </ul>
+      </article>
+
+      <!-- E-commerce -->
+      <article>
+        <header>
+          <h2>
+            <a href="https://github.com/FestimKrasniqi/E-commerce-app" target="_blank">
+              E-commerce App
+            </a>
+          </h2>
+        </header>
+
+         <p>
+      A full-stack <strong>MERN</strong> e-commerce platform featuring product management, order 
+      processing, authentication, and an admin dashboard. The system includes RESTful APIs, 
+      secure JWT authentication, and state management for user sessions.
+     </p>
+
+        <ul class="actions special">
+          <li>
+            <a href="https://github.com/FestimKrasniqi/E-commerce-app"
+               target="_blank"
+               class="button">View Code</a>
+          </li>
+
+          <li>
+            <a href="https://mern-app-aac6e.web.app/"
+               target="_blank"
+               class="button">Live Demo</a>
+          </li>
+        </ul>
+      </article>
+
+      <!-- Guitar Shop -->
+      <article>
+        <header>
+          <h2>
+            <a href="https://github.com/FestimKrasniqi/Online-Guitar-Shop" target="_blank">
+              Online Guitar Shop
+            </a>
+          </h2>
+        </header>
+
+         <p>
+      A modern web application built with <strong>React</strong>, <strong>TypeScript</strong>, and 
+      <strong>GraphQL</strong> allowing users to browse musical instruments. 
+      Includes multilingual support, efficient data querying, and dynamic UI components.
+    </p>
+
+        <ul class="actions special">
+          <li>
+            <a href="https://github.com/FestimKrasniqi/Online-Guitar-Shop"
+               target="_blank"
+               class="button">View Project</a>
+          </li>
+
+          <li>
+            <a href="https://online-guitar-shop-kappa.vercel.app/"
+               target="_blank"
+               class="button">Live Demo</a>
+          </li>
+        </ul>
+      </article>
+
+      <!-- Issue Tracker -->
+      <article>
+        <header>
+          <h2>
+            <a href="https://github.com/FestimKrasniqi/Mini-Issue-Tracker-App" target="_blank">
+              Mini Issue Tracker
+            </a>
+          </h2>
+        </header>
+
+       ]<p>
+      A project and issue tracking system developed with <strong>Laravel</strong> and 
+      <strong>Bootstrap 5</strong>. The application allows teams to create projects, assign tasks, 
+      track issues, and manage workflows using relational database design and role-based access control.
+    </p>
+
+        <ul class="actions special">
+          <li>
+            <a href="https://github.com/FestimKrasniqi/Mini-Issue-Tracker-App"
+               target="_blank"
+               class="button">View Project</a>
+          </li>
+        </ul>
+      </article>
+
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer id="footer">
+    <section class="alt">
+      <h3>Location</h3>
+      <p>Peje, Kosovo</p>
+    </section>
+
+    <section>
+      <h3>Phone</h3>
+      <p><a href="tel:+38349553410">+383 49 553 410</a></p>
+    </section>
+
+    <section>
+      <h3>Email</h3>
+      <p><a href="mailto:krasniqif937@gmail.com">krasniqif937@gmail.com</a></p>
+    </section>
+
+    <section>
+      <h3>Connect</h3>
+      <ul class="icons alt">
+        <li><a href="https://x.com/Festim53831018" target="_blank" class="icon brands alt fa-twitter"></a></li>
+        <li><a href="https://www.facebook.com/festim.krasniqi.54" target="_blank" class="icon brands alt fa-facebook-f"></a></li>
+        <li><a href="https://www.instagram.com/festimmkrasniqii" target="_blank" class="icon brands alt fa-instagram"></a></li>
+      </ul>
+    </section>
+  </footer>
+
+  <!-- Copyright -->
+  <div id="copyright">
+    <ul>
+      <li>© <span id="current-year"></span> Festim Krasniqi</li>
+    </ul>
   </div>
 
-  <!-- Scripts -->
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/jquery.scrollex.min.js"></script>
-  <script src="assets/js/jquery.scrolly.min.js"></script>
-  <script src="assets/js/browser.min.js"></script>
-  <script src="assets/js/breakpoints.min.js"></script>
-  <script src="assets/js/util.js"></script>
-  <script src="assets/js/main.js"></script>
+</div>
+
+<!-- Scripts -->
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  const yearElement = document.getElementById("current-year");
+  if (yearElement) {
+    yearElement.textContent = new Date().getFullYear();
+  }
+});
+</script>
+
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+
 </body>
 </html>
